chore(playground): add watermelon icon and increase font weight

--- a/playground/index.html
+++ b/playground/index.html
@@ -16,7 +16,7 @@
     <textarea id="editor"></textarea>
 
     <div id="output">
-
+        <img src="./assets/watermelon.png" width="300px" alt="">
     </div>
     <script src="./index.js"></script>
 </body>
