--- a/playground/index.html
+++ b/playground/index.html
@@ -9,14 +9,10 @@
 </head>
 
 <body>
-    <!-- <div id="tools">
-        <img src="./assets/logo.svg" alt="JCLINT">
-    </div> -->
-
     <textarea id="editor"></textarea>
 
     <div id="output">
-        <img src="./assets/watermelon.png" width="300px" alt="">
+        <img src="./assets/watermelon.png" alt="watermelon">
     </div>
     <script src="./index.js"></script>
 </body>
