feat(playground): implement upload API

--- a/playground/index.html
+++ b/playground/index.html
@@ -15,7 +15,7 @@
             JCLINT
         </a>
 
-        <a id="linkbutton" href="" title="Shareable link to this diagram">
+        <a id="upload" href="#" title="Upload">
             <img src="./assets/upload.svg"> Upload
         </a>
         <a href="https://github.com/dcalsky/jclint" target="_blank" title="Github">
